--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-PORT=3000
+PORT=8000
+MONGO_URL=mongodb+srv://ayusht75way:GFG5Jh5bWko9Al5D@cluster1.94fjfig.mongodb.net/employee_mgmt?retryWrites=true&w=majority
+JWT_SECRET_KEY=JWT_SECRET_KEY
+NODEMAILER_EMAIL=devpractice27@gmail.com
+NODEMAILER_PASSWORD=ndiflkouvjwbjfky
