--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
     "start": "nodemon"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.4",
+    "@types/node-cron": "^3.0.11",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "email-templates": "^11.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2"
